--- a/form.html
+++ b/form.html
@@ -292,7 +292,7 @@
                 <li>Grill</li>
                 <li>Life Vest</li>
                 <li>Googles</li>
-                <li>Island Hoping</li>
+                <li>Island Hopping</li>
             </ul>
 
         </div>
